# ddeskshell-0.1

./: .cproject  .project  Makefile.am  Makefile.in  README.md  build_packet.txt  config.h.in  configure  configure.ac
data/: Makefile.am  Makefile.in  ddesk_shell.cfg
debian/: README.source  changelog  control  copyright  ddeskshell.cron.d.ex  ddeskshell.default.ex  ddeskshell.doc-base.EX  ddeskshell.substvars  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
debian/ddeskshell/DEBIAN/: control  md5sums
debian/ddeskshell/usr/share/ddeskshell/: ddesk_shell.cfg
debian/ddeskshell/usr/share/doc/ddeskshell/: README.Debian
doc/: Makefile  Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  ddeskshell.c  ddeskshell.h
