## data/Makefile.am



pkgdata_DATA=background_any.jpg *.cfg *.png 
pkgdata_flags_16dir = $(pkgdatadir)/flags/16
pkgdata_flags_32dir = $(pkgdatadir)/flags/32
pkgdata_flags_48dir = $(pkgdatadir)/flags/48
pkgdata_flags_64dir = $(pkgdatadir)/flags/64


pkgdata_flags_16_DATA=./flags/16/*.png
pkgdata_flags_32_DATA=./flags/32/*.png
pkgdata_flags_48_DATA=./flags/48/*.png
pkgdata_flags_64_DATA=./flags/64/*.png